src/third_party/nasm/travis/test/gotoff64.stderr
./travis/test/gotoff64.asm:9: error: ELF64 requires ..gotoff references to be qword absolute
./travis/test/gotoff64.asm:10: error: ELF64 requires ..gotoff references to be qword absolute
./travis/test/gotoff64.asm:19: error: ELF64 requires ..gotoff references to be qword
./travis/test/gotoff64.asm:20: error: ELF64 requires ..gotoff references to be qword
